--- a/videos.css
+++ b/videos.css
@@ -34,22 +34,6 @@ body {
     flex-direction: row;
     justify-content: flex-start;
 }
-.caja3 {
-    height: 30rem;
-    background-color: rgb(19, 19, 19);
-    margin: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-}
-.caja4 {
-    height: 30rem;
-    background-color: rgb(19, 19, 19);
-    margin: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-}
 .imagen {
     width: 100%;
     height: 50rem;
@@ -62,10 +46,13 @@ body {
     margin: 1% 1.5%;
 }
 .card {
-    margin: 5px;
+    margin: 10px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+}
+.card-img-top {
+    height: 7rem;
 }
 .carousel-inner {
     padding: 0 45px;
@@ -85,4 +72,13 @@ body {
 }
 .btn-primary {
     background-color: mediumpurple;
+}
+.dropdown-item {
+    text-decoration: none;
+    font-family: cute; 
+    font-size: 25px;
+    color: whitesmoke;
+}
+.card-text {
+    font-family: roboto;
 }
